added flexbox column direction to #app

--- a/public/styles.css
+++ b/public/styles.css
@@ -13,3 +13,10 @@ html {
 body {
   box-sizing: border-box;
 }
+
+#app {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
