--- a/public/styles.css
+++ b/public/styles.css
@@ -12,4 +12,16 @@ html {
 
 body {
   box-sizing: border-box;
+  position: relative;
+}
+
+#app {
+  left: 50%;
+  position: absolute;
+  width: 50rem;
+  transform: translateX(-50%);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
 }
