--- a/public/styles.css
+++ b/public/styles.css
@@ -18,10 +18,53 @@ body {
 #app {
   left: 50%;
   position: absolute;
-  width: 50rem;
+  width: 75vw;
   transform: translateX(-50%);
+  display: flex;
+  flex-direction: column;
+  overflow: hidden;
+}
+
+.navbar {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  background-color: lightslategray;
+}
+
+.logo {
+  margin-left: 2rem;
+  height: 4rem;
+  cursor: pointer;
+}
+
+.search {
+  margin-right: 2rem;
+  height: 2rem;
   display: flex;
   align-items: center;
   justify-content: center;
-  flex-direction: column;
+  position: relative;
+}
+
+.search-input {
+  height: inherit;
+  outline: none;
+  font-size: 1rem;
+}
+
+.search-btn {
+  height: 1.75rem;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  cursor: pointer;
+  outline: none;
+  right: 3px;
+  position: absolute;
+  border: none
+}
+
+.search-icon {
+  height: 1rem;
 }
