--- a/public/styles.css
+++ b/public/styles.css
@@ -74,7 +74,11 @@ body {
   flex-flow: column wrap;
   border: 1px solid red;
 }
-.btn {
+.helpful-btn,
+.add-answer-btn,
+.report-btn,
+.add-question-btn
+.more-questions-btn {
   margin: 0 5px 0 5px;
   border: 1px solid black;
 }
