search bar updating state in q and a widget

--- a/public/styles.css
+++ b/public/styles.css
@@ -109,6 +109,10 @@ body {
   flex-wrap: nowrap;
   justify-content: space-between;
 }
+.no-questions {
+  color: gray;
+  text-emphasis-style: sesame;
+}
 .search-bar {
   width: auto;
   display: flex;
