added social media bar and adjusted subcomponent size

--- a/public/styles.css
+++ b/public/styles.css
@@ -125,6 +125,8 @@ body {
   max-height: 25%;
 }
 
+/* OVERVIEW=============================== */
+
 .overview-widget {
   text-align: left;
   margin: 40px;
@@ -135,10 +137,20 @@ body {
 .overview-widget-productInfo {
   font-size: large;
   min-height: 150px;
+  width: 330px;
   margin: 20px;
   list-style: none;
   border: 1px solid #77777769;
   background-color: #fdfdfd;
   border-radius: 4px;
   padding: 30px 50px 0px 50px;
+}
+
+.stars-reviews {
+    display: flex;
+    justify-content: space-between;
+}
+
+.fa{
+  padding-right: 10px;
 }
