--- a/public/styles.css
+++ b/public/styles.css
@@ -125,8 +125,6 @@ body {
   max-height: 25%;
 }
 
-/* OVERVIEW=============================== */
-
 .overview-widget {
   text-align: left;
   margin: 40px;
@@ -137,7 +135,6 @@ body {
 .overview-widget-productInfo {
   font-size: large;
   min-height: 150px;
-  width: 330px;
   margin: 20px;
   list-style: none;
   border: 1px solid #77777769;
@@ -146,17 +143,68 @@ body {
   padding: 30px 50px 0px 50px;
 }
 
-.stars-reviews {
-    display: flex;
-    justify-content: space-between;
+.parent {
+  width: 85%;
+  overflow: hidden;
+  margin: auto;
+  padding: 1rem;
+}
+.slider-container {
+ /* if you want to have a scrollbar, you can add overflow here */
+  overflow-x: hidden;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin: 0rem 2rem;
+  padding: 3px;
+ scroll-behavior: smooth;
+}
+.slider-wrapper {
+  display: flex;
+  align-items: center;
+  width: 100%;
+}
+.btn {
+  position: absolute;
+  box-shadow: 0 0 6.1px 0.9px white;
+  padding: 1px;
+  cursor: pointer;
+  width: 20px;
+  height: 20px;
+  background: black;
+  text-align: center;
+  color: white;
+  border-radius: 50%;
+}
+.prev {
+  left: 1rem;
+}
+.next {
+  right: 1rem;
+}
+.disable {
+ opacity: 0.5;
+ pointer-events: none;
+}
+.child {
+  padding: 5px 20px;
+  background: #59eb97;
+  text-align: center;
+  width: 100%;
+  margin-right: 10px;
+  border-radius: 21px;
 }
 
-.fa{
-  padding-right: 10px;
+.thumbnail {
+  padding: 5px 20px;
+  width: 140px;
+  height: 140px;
+  object-fit: cover;
 }
 
-.review {
-  font-style: italic;
-  font-size: medium;
-  font-family: monospace;
+.image {
+  padding: 5px 20px;
+  width: 700px;
+  height: 700px;
+  object-fit: cover;
 }
