--- a/public/styles.css
+++ b/public/styles.css
@@ -103,6 +103,10 @@ body {
   flex-flow: column nowrap;
   align-items: flex-start;
 }
+.answer-list {
+  display: flex;
+  flex-flow: row nowrap;
+}
 .interaction {
   display: flex;
   flex-direction: row;
