related products styling complete

--- a/public/styles.css
+++ b/public/styles.css
@@ -15,6 +15,12 @@ body {
   position: relative;
 }
 
+img {
+  max-width: 100%;
+  max-height: 100%;
+  display: block;
+}
+
 #app {
   left: 50%;
   position: absolute;
@@ -142,80 +148,36 @@ body {
   padding: 30px 50px 0px 50px;
 }
 
-.slider-container {
-  /* if you want to have a scrollbar, you can add overflow here */
-   overflow-x: hidden;
-   display: flex;
-   justify-content: center;
-   align-items: center;
-   margin: 0rem 2rem;
-   padding: 3px;
-   scroll-behavior: smooth;
- }
- .slider-wrapper {
-   display: flex;
-   align-items: center;
- }
- .btn {
-   position: absolute;
-   box-shadow: 0 0 6.1px 0.9px grey;
-   padding: 5px;
-   cursor: pointer;
-   width: 20px;
-   height: 20px;
-   background: grey;
-   text-align: center;
-   color: white;
-   border-radius: 50%;
-   z-index: 10;
- }
- .prev {
-   left: 1rem;
- }
- .next {
-   right: -1rem;
- }
- .disable {
-   opacity: 0.5;
-  pointer-events: none;
- }
- .child {
-   padding: 5px 20px;
-   background: #59eb97;
-   text-align: center;
-   width: 100%;
-   margin-right: 10px;
-   border-radius: 21px;
- }
-
- /* ////////// */
-
-
-/* .parent {
-  width: 85%;
+.carousel-list {
+  width: 100%;
   overflow: hidden;
   margin: auto;
-  padding: 1rem;
+  /* padding: 1rem; */
 }
+
+.related-list {
+  min-height: 33vh;
+}
+
 .slider-container {
   height: inherit;
-  overflow: hidden;
+  overflow-x: hidden;
   display: flex;
-  justify-content: space-between;
+  justify-content: center;
   align-items: center;
   margin: 0rem 2rem;
   padding: 3px;
   scroll-behavior: smooth;
 }
-.slider-wrapper {
+
+ .slider-wrapper {
+  height: inherit;
   display: flex;
-  justify-content: space-between;
   align-items: center;
-  overflow: hidden;
-  height: 100%;
-  width: 100%;
-}
-.btn {
+  justify-content: space-between;
+ }
+
+ .btn {
   position: absolute;
   box-shadow: 0 0 6.1px 0.9px grey;
   padding: 5px;
@@ -227,53 +189,44 @@ body {
   color: white;
   border-radius: 50%;
   z-index: 10;
-}
-.prev {
+ }
+
+ .prev {
   left: 1rem;
-  z-index: 10;
-}
-.next {
+ }
+
+ .next {
   right: 1rem;
-  z-index: 10;
-}
-.disable {
+ }
+
+ .disable {
   opacity: 0.5;
   pointer-events: none;
+ }
+
+ /* ////////// */
+
+
+.card {
+  border: 1px solid black;
+  height: 33vh;
+  display: flex;
+  flex-direction: column;
+  flex-shrink: 0;
+  width: 30%;
+  margin-right: 1.5rem;
 }
 
-.child {
-  padding: 5px 20px;
-  background: #59eb97;
-  text-align: center;
-  margin-right: 10px;
-  border-radius: 21px;
-}
-
-.related-list {
-  height: 25rem;
+.card-display img {
+  height: 15rem;
   width: 100%;
 }
 
-.card {
-  height: inherit;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  flex-shrink: 0;
-  width: 33%;
-}
-
-.card-display {
-  height: 50%;
-}
 .card-info {
-  height: 50%;
-} */
+  text-align: left;
+}
 
-/* img {
-  max-width: 100%;
-  max-height: 100%;
-  display: block;
-} */
+.thumbnail {
+  flex-shrink: 0;
+}
 
