--- a/public/styles.css
+++ b/public/styles.css
@@ -146,6 +146,17 @@ body {
   padding: 30px 50px 0px 50px;
 }
 
+.style-select {
+  font-size: large;
+  min-height: 150px;
+  margin: 20px;
+  list-style: none;
+  border: 1px solid #77777769;
+  background-color: #fdfdfd;
+  border-radius: 4px;
+  padding: 30px 50px 0px 50px;
+}
+
 .img-list {
   width: 100%;
   overflow: hidden;
