--- a/public/styles.css
+++ b/public/styles.css
@@ -105,6 +105,9 @@ body {
 .questions-and-answers {
   display: flex;
   flex-flow: column nowrap;
+  height: auto;
+  max-height: 100vh;
+  overflow: scroll;
 }
 .question-and-answer-container {
   display: flex;
@@ -123,7 +126,11 @@ body {
 .answer-list {
   display: flex;
   flex-flow: row nowrap;
+  height: auto;
+  max-height: 50vh;
+  overflow: scroll;
 }
+
 .interaction {
   display: flex;
   flex-direction: row;
