--- a/public/styles.css
+++ b/public/styles.css
@@ -180,10 +180,8 @@ body {
 }
 
 .style-select {
-  font-size: large;
-  min-height: 150px;
-  margin: 20px;
-  list-style: none;
+  font-size: 2rem;
+  display: flex;
   border: 1px solid #77777769;
   background-color: #fdfdfd;
   border-radius: 4px;
