small changed to readme, small changes to styles (only for starrating) added star rating component (works only with 1/2 stars atm) some work on review subcomponents big work on addreview modal subcomponent, still not done though

--- a/public/styles.css
+++ b/public/styles.css
@@ -320,11 +320,16 @@ body {
   object-position: center;
 }
 
-.stars-reviews {
-  display: flex;
-  justify-content: space-between;
-}
-
 .fa {
   padding-right: 10px;
+}
+
+/* WIDGETS */
+/* star rating */
+.stars {
+  /*
+  display: flex;
+  justify-content: space-between;
+  */
+  color: gold;
 }
