--- a/src/sass/components.scss
+++ b/src/sass/components.scss
@@ -1,52 +1,17 @@
-:root {
-  --color-primary: #eb2f64;
-  --color-primary-light: #FF3366;
-  --color-primary-dark: #BA265D;
-  --color-grey-light-1: #faf9f9;
-  --color-grey-light-2: #f4f2f2;
-  --color-grey-light-3: #f0eeee;
-  --color-grey-light-4: #ccc;
-  --color-grey-dark-1: #333;
-  --color-grey-dark-2: #777;
-  --color-grey-dark-3: #999;
-  --shadow-dark: 0 2rem 6rem rgba(0,0,0,.3);
-  --shadow-light: 0 2rem 5rem rgba(0,0,0,.06);
-  --line: 1px solid var(--color-grey-light-2); }
-
-*,
-*::after,
-*::before {
-  margin: 0;
-  padding: 0;
-  box-sizing: inherit; }
-
-html {
-  font-size: 62.5%; }
-
-body {
-  box-sizing: border-box;
-  position: relative;
-  font-family: 'Lato', sans-serif; }
-
-#app {
-  left: 50%;
-  position: absolute;
-  width: 75vw;
-  transform: translateX(-50%);
-  display: flex;
-  flex-direction: column;
-  overflow: hidden; }
+////////// NAVBAR
 
 .navbar {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  background-color: lightslategray; }
+  background-color: lightslategray;
+}
 
 .logo {
   margin: .5rem 0 .5rem 2rem;
   height: 4rem;
-  cursor: pointer; }
+  cursor: pointer;
+}
 
 .search {
   margin-right: 2rem;
@@ -54,12 +19,15 @@ body {
   display: flex;
   align-items: center;
   justify-content: center;
-  position: relative; }
-  .search-input {
+  position: relative;
+
+  &-input {
     height: inherit;
     outline: none;
-    font-size: 1rem; }
-  .search-btn {
+    font-size: 1rem;
+  }
+
+  &-btn {
     height: 1.75rem;
     display: flex;
     align-items: center;
@@ -68,9 +36,15 @@ body {
     outline: none;
     right: .5rem;
     position: absolute;
-    border: none; }
-  .search-icon {
-    height: 1rem; }
+    border: none
+  }
+
+  &-icon {
+    height: 1rem;
+  }
+}
+
+////////// Q&A
 
 .q-and-a-widget {
   padding: 1rem;
@@ -80,7 +54,8 @@ body {
   border: 1px solid black;
   border-radius: 1rem;
   background-color: #e0e2dd;
-  box-shadow: 1rem 1rem 1rem #73776f; }
+  box-shadow: 1rem 1rem 1rem #73776f;
+}
 
 .helpful-btn,
 .add-answer-btn,
@@ -96,7 +71,8 @@ body {
   text-align: center;
   border-radius: 1rem;
   box-shadow: .5rem .5rem .5rem #73776f;
-  z-index: 10; }
+  z-index: 10;
+}
 
 .helpful-btn:hover,
 .add-answer-btn:hover,
@@ -105,42 +81,48 @@ body {
 .more-questions-btn:hover,
 .more-answers-btn:hover,
 .more-answers-btn:hover {
-  cursor: pointer; }
+  cursor: pointer;
+}
 
 .container,
 .user-info {
-  margin: 5px; }
+  margin: 5px;
+}
 
 .user-info span {
-  color: #48463e; }
+  color: #48463e;
+}
 
 .questions-and-answers {
   display: flex;
   flex-flow: column nowrap;
   height: auto;
   max-height: 100vh;
-  overflow: scroll; }
-
+  overflow: scroll;
+}
 .question-and-answer-container {
   display: flex;
-  flex-flow: column nowrap; }
-
+  flex-flow: column nowrap;
+}
 .question-item {
   display: flex;
   flex-flow: row nowrap;
-  justify-content: space-between; }
+  justify-content: space-between;
+}
 
 .answer-header {
   display: flex;
   flex-flow: column nowrap;
-  align-items: flex-start; }
+  align-items: flex-start;
+}
 
 .answer-list {
   display: flex;
   flex-flow: row nowrap;
   height: auto;
   max-height: 50vh;
-  overflow: scroll; }
+  overflow: scroll;
+}
 
 .add-answer-modal,
 .add-question-modal {
@@ -150,47 +132,56 @@ body {
   left: 15%;
   right: 15%;
   background-color: #EDEBE8;
-  overflow: scroll; }
+  overflow: scroll;
+}
 
 .interaction {
   display: flex;
   flex-direction: row;
   flex-wrap: nowrap;
-  justify-content: space-between; }
+  justify-content: space-between;
+}
 
 .no-questions {
   color: gray;
-  text-emphasis-style: sesame; }
+  text-emphasis-style: sesame;
+}
 
 .search-bar {
   width: auto;
   display: flex;
-  justify-content: space-around; }
+  justify-content: space-around;
+}
 
 .search-bar input {
   width: 100%;
   margin: 5px;
   padding: 5px;
-  background-color: #d5d4d0; }
+  background-color: #d5d4d0;
+}
 
 .photo-list {
   display: flex;
   flex-flow: row wrap;
   max-width: 90%;
-  max-height: 90%; }
+  max-height: 90%;
+}
 
 .photo-list img {
   margin: 10px;
   max-width: 25%;
-  max-height: 25%; }
+  max-height: 25%;
+}
 
 /* OVERVIEW========================================= */
+
 .overview-widget {
   position: relative;
   text-align: left;
   border-color: cadetblue;
   border-style: solid;
-  height: 90vh; }
+  height: 90vh;
+}
 
 .overview-widget-productInfo {
   font-size: 1.5rem;
@@ -198,51 +189,60 @@ body {
   min-height: 150px;
   width: 340px;
   top: 18rem;
-  right: 8rem; }
+  right: 8rem;
+}
 
 .style-select {
   position: absolute;
   bottom: 14rem;
-  right: 0;
+  right:0;
   font-size: 2rem;
   display: flex;
   width: 50%;
-  font-size: 1.5rem; }
+  font-size: 1.5rem;
+}
 
 .add-cart {
   position: absolute;
   border-style: solid;
   width: 100%;
   height: 15%;
-  bottom: 0; }
+  bottom: 0;
+}
 
 .row-select {
-  display: inline-block; }
+  display: inline-block;
+}
 
 .style-img {
   padding: 5px 20px;
   width: 12rem;
   height: 10rem;
   object-fit: cover;
-  border-radius: 50%; }
+  border-radius: 50%;
+}
 
 .carousel-list {
   width: 100%;
   overflow: hidden;
-  margin: auto; }
+  margin: auto;
+}
 
 .carousel-vertical {
-  display: flex;
-  height: 20rem; }
+ display: flex;
+ height: 20rem;
+}
 
 .img-gallery-wrap {
   position: relative;
-  height: 40rem; }
+  height: 40rem;
+}
 
 .related-list {
-  min-height: 33vh; }
+  min-height: 33vh;
+}
 
-.slider-container {
+ .slider-container {
   height: inherit;
   overflow-x: hidden;
   display: flex;
@@ -250,53 +250,65 @@ body {
   align-items: center;
   margin: 0rem 2rem;
   padding: 3px;
-  scroll-behavior: smooth; }
+  scroll-behavior: smooth;
+}
 
-.slider-wrapper-horizontal {
+ .slider-wrapper-horizontal {
   height: inherit;
   display: flex;
   align-items: center;
-  width: 100%; }
+  width: 100%;
+ }
 
-.slider-wrapper-vertical {
+
+ .slider-wrapper-vertical {
   height: inherit;
   display: flex;
   align-items: center;
-  width: 100%; }
+  width: 100%;
+ }
 
-.prev {
-  left: 1rem; }
+ .prev {
+  left: 1rem;
+ }
 
-.next {
-  right: 1rem; }
+ .next {
+  right: 1rem;
+ }
 
-.disable {
+ .disable {
   opacity: 0.5;
-  pointer-events: none; }
+  pointer-events: none;
+ }
 
 .card {
   border: 1px solid black;
   height: 33vh;
   flex-shrink: 0;
   width: 20%;
-  margin-right: 1.5rem; }
+  margin-right: 1.5rem;
+}
 
 .card-display {
   height: 50%;
-  position: relative; }
+  position: relative;
+}
 
 .card-info {
-  height: 50%; }
+  height: 50%;
+}
 
 .card-display img {
   width: 100%;
   height: 100%;
-  object-fit: contain; }
+  object-fit: contain;
+}
 
 .card-info {
   margin-top: 2rem;
   text-align: center;
-  font-size: 1.5rem; }
+  font-size: 1.5rem;
+}
 
 .addOutfit-btn {
   position: absolute;
@@ -310,61 +322,83 @@ body {
   border: none;
   cursor: pointer;
   overflow: hidden;
-  outline: none; }
+  outline: none;
+}
 
 .outfits {
-  margin-top: 4rem; }
+  margin-top: 4rem;
+}
 
 .thumbnail {
   /* flex-shrink: 0; */
   padding: 5px 20px;
   width: 140px;
   height: 140px;
-  object-fit: cover; }
+  object-fit: cover;
+}
+
 
 .thumbnail-gallery {
   /* flex-shrink: 0; */
   padding: 10px;
   width: 15rem;
   height: 8rem;
-  object-fit: cover; }
+  object-fit: cover;
+}
 
 .gallery-img img {
   padding: 5px 20px;
   height: 40rem;
-  left: 0; }
+  left:0;
+}
 
 .gallery-img {
   position: absolute;
   top: 15rem;
-  height: 30rem; }
+  height: 30rem;
+}
 
 .fa {
-  padding-right: 10px; }
+  padding-right: 10px;
+}
 
 /* WIDGETS */
 .stars {
-  color: gold; }
+  color: gold;
+}
 
 .btn {
   font-size: 1.5rem;
   font-weight: 300;
   border: none;
   color: #fff;
-  cursor: pointer; }
-  .btn:hover {
-    background-image: linear-gradient(to left, var(--color-primary-light), var(--color-primary-dark)); }
-  .btn:focus {
-    outline: none;
-    animation: pulsate 1s infinite; }
+  cursor: pointer;
+
+  &:hover {
+      background-image: linear-gradient(to left, var(--color-primary-light), var(--color-primary-dark));
+  }
+
+  &:focus {
+      outline: none;
+      animation: pulsate 1s infinite;
+  }
+}
+
+////// KEYFRAMES
 
 @keyframes pulsate {
   0% {
-    transform: scale(1);
-    box-shadow: none; }
+      transform: scale(1);
+      box-shadow: none;
+  }
+
   50% {
-    transform: scale(1.05);
-    box-shadow: 0 1rem 4rem rgba(0, 0, 0, 0.25); }
+      transform: scale(1.05);
+      box-shadow: 0 1rem 4rem rgba(0,0,0,.25);
+  }
+
   100% {
-    transform: scale(1);
-    box-shadow: none; } }
+      transform: scale(1);
+      box-shadow: none;
+  }
+}
