--- a/src/sass/base.scss
+++ b/src/sass/base.scss
@@ -34,6 +34,7 @@ body {
   box-sizing: border-box;
   position: relative;
   font-family: 'Lato', sans-serif;
+  background-color: var(--color-grey-light-1);
 }
 
 #app {
