--- a/public/styles.css
+++ b/public/styles.css
@@ -45,8 +45,8 @@ body {
   background-color: lightslategray;
   height: 10rem; }
   .navbar-logo {
-    height: inherit;
-    cursor: pointer; }
+    height: 8rem;
+    width: 8rem; }
 
 .search {
   margin-right: 2rem;
