--- a/public/styles.css
+++ b/public/styles.css
@@ -9,8 +9,8 @@
   --color-grey-dark-1: #333;
   --color-grey-dark-2: #777;
   --color-grey-dark-3: #999;
-  --shadow-dark: 0 2rem 6rem rgba(0,0,0,.3);
-  --shadow-light: 0 2rem 5rem rgba(0,0,0,.06);
+  --shadow-dark: rgba(0,0,0,.3);
+  --shadow-light: rgba(0,0,0,.06);
   --line: 1px solid var(--color-grey-light-2); }
 
 *,
@@ -146,11 +146,14 @@ body {
   height: 33vh; }
 
 .card {
-  border: 1px solid black;
-  height: 33vh;
+  height: 80%;
   flex-shrink: 0;
   width: 20%;
-  margin-right: 1.5rem; }
+  margin-right: 1.5rem;
+  box-shadow: 0 0.5rem 0.8rem var(--shadow-dark);
+  transition: 0.3s; }
+  .card:hover {
+    box-shadow: 0 1rem 1rem var(--shadow-dark); }
   .card-display {
     height: 50%;
     position: relative; }
@@ -159,7 +162,8 @@ body {
   .card-display img {
     width: 100%;
     height: 100%;
-    object-fit: contain; }
+    object-fit: contain;
+    border-radius: 5px 5px 0 0; }
   .card-info {
     margin-top: 2rem;
     text-align: center;
