--- a/src/sass/components.scss
+++ b/src/sass/components.scss
@@ -135,11 +135,16 @@
 }
 
 .card {
-  border: 1px solid black;
-  height: 33vh;
+  height: 80%;
   flex-shrink: 0;
   width: 20%;
   margin-right: 1.5rem;
+  box-shadow: 0 .5rem .8rem var(--shadow-dark);
+  transition: 0.3s;
+
+  &:hover {
+    box-shadow: 0 1rem 1rem var(--shadow-dark);
+  }
 
   &-display {
     height: 50%;
@@ -154,6 +159,7 @@
     width: 100%;
     height: 100%;
     object-fit: contain;
+    border-radius: 5px 5px 0 0;
   }
 
   &-info {
