--- a/public/styles.css
+++ b/public/styles.css
@@ -2,10 +2,10 @@
   --color-primary: #eb2f64;
   --color-primary-light: #FF3366;
   --color-primary-dark: #BA265D;
-  --color-grey-light-1: #faf9f9;
-  --color-grey-light-2: #f4f2f2;
-  --color-grey-light-3: #f0eeee;
-  --color-grey-light-4: #ccc;
+  --color-white: #fff;
+  --color-grey-light-1: #f6f6f6;
+  --color-grey-light-2: #f0eeee;
+  --color-grey-light-3: #ccc;
   --color-grey-dark-1: #333;
   --color-grey-dark-2: #777;
   --color-grey-dark-3: #999;
@@ -27,7 +27,7 @@ body {
   box-sizing: border-box;
   position: relative;
   font-family: 'Lato', sans-serif;
-  background-color: var(--color-grey-light-1); }
+  background-color: var(--color-white); }
 
 #app {
   left: 50%;
@@ -142,8 +142,15 @@ body {
 .fa {
   padding-right: 10px; }
 
-.related-list {
-  height: 33vh; }
+.related-outfits-container {
+  background-color: var(--color-grey-light-1); }
+
+.related, .outfits {
+  height: 30vh; }
+  .related-text, .outfits-text {
+    font-size: 2rem; }
+  .related-list, .outfits-list {
+    height: inherit; }
 
 .card {
   height: 80%;
@@ -349,7 +356,7 @@ body {
 
 .slider-container {
   height: inherit;
-  overflow-x: hidden;
+  overflow: hidden;
   display: flex;
   justify-content: center;
   align-items: center;
