--- a/src/sass/base.scss
+++ b/src/sass/base.scss
@@ -3,10 +3,10 @@
   --color-primary-light: #FF3366;
   --color-primary-dark: #BA265D;
 
-  --color-grey-light-1: #faf9f9;
-  --color-grey-light-2: #f4f2f2;
-  --color-grey-light-3: #f0eeee;
-  --color-grey-light-4: #ccc;
+  --color-white: #fff;
+  --color-grey-light-1: #f6f6f6;
+  --color-grey-light-2: #f0eeee;
+  --color-grey-light-3: #ccc;
 
   --color-grey-dark-1: #333;
   --color-grey-dark-2: #777;
@@ -34,7 +34,7 @@ body {
   box-sizing: border-box;
   position: relative;
   font-family: 'Lato', sans-serif;
-  background-color: var(--color-grey-light-1);
+  background-color: var(--color-white);
 }
 
 #app {
