--- a/src/sass/layout.scss
+++ b/src/sass/layout.scss
@@ -30,7 +30,7 @@
 .slider {
   &-container {
     height: inherit;
-    overflow-x: hidden;
+    overflow: hidden;
     display: flex;
     justify-content: center;
     align-items: center;
