--- a/src/sass/components.scss
+++ b/src/sass/components.scss
@@ -2,7 +2,7 @@
 
 .navbar {
   height: 10rem;
-  border-bottom: 2rem solid var(--color-grey-dark-1);
+  border-bottom: 4rem solid var(--color-grey-dark-1);
 
   &-main {
     position: relative;
@@ -27,10 +27,13 @@
     }
 
     &-search {
-      width: 30%;
+      height: 3rem;
+      width: 20rem;
+      margin-right: 1rem;
       &-btn {
-        height: 1.75rem;
+        height: 2.75rem;
         right: .5rem;
+        background-color: transparent;
       }
     }
   }
