--- a/public/styles.css
+++ b/public/styles.css
@@ -153,8 +153,10 @@ body {
 
 .related, .outfits {
   height: 50%; }
+  .related-text, .outfits-text {
+    font-size: 2rem; }
   .related-list, .outfits-list {
-    height: 100%; }
+    height: 95%; }
 
 .card {
   height: inherit;
@@ -176,8 +178,11 @@ body {
       cursor: pointer;
       background: transparent;
       border: none;
-      font-size: 2rem;
+      font-size: 2rem; }
+    .related-list .card-display-btn {
       color: yellow; }
+    .outfits-list .card-display-btn {
+      color: red; }
   .card-display img {
     width: 100%;
     height: 100%;
