--- a/src/sass/components.scss
+++ b/src/sass/components.scss
@@ -138,7 +138,7 @@
 //////// RELATED PRODUCTS & OUTFITS
 
 .related-outfits-container {
-  background-color: var(--color-grey-light-1);
+  background-color: #fff;
   margin-top: 2rem;
   height: 50vh;
 }
@@ -246,43 +246,53 @@
 
 ////////// Q&A
 
-.q-and-a-widget {
-  padding: 1rem;
-  margin: 1rem;
+.q-and-a {
+  // padding: 1rem;
+  // margin: 1rem;
   display: flex;
-  flex-flow: column wrap;
-  border: 1px solid black;
-  border-radius: 1rem;
-  background-color: #e0e2dd;
-  box-shadow: 1rem 1rem 1rem #73776f;
+  flex-direction: column;
+  background-color: var(--color-grey-light-1);
+  height: max-content;
 }
 
-.helpful-btn,
-.add-answer-btn,
-.report-btn,
-.add-question-btn,
-.more-questions-btn,
-.more-answers-btn,
-.more-answers-btn {
-  margin: 5px;
-  padding: 2px;
-  border: 1px solid black;
-  max-width: 100px;
-  text-align: center;
-  border-radius: 1rem;
-  box-shadow: .5rem .5rem .5rem #73776f;
-  z-index: 10;
-}
-
-.helpful-btn:hover,
-.add-answer-btn:hover,
-.report-btn:hover,
-.add-question-btn:hover,
-.more-questions-btn:hover,
-.more-answers-btn:hover,
-.more-answers-btn:hover {
+.btn {
   cursor: pointer;
+
+  &_ {
+    border: 0;
+    outline: none;
+    background: transparent;
+    border-bottom: 1px solid var(--color-grey-dark-2);
+    color: var(--color-grey-dark-3);
+  }
 }
+
+// .helpful-btn,
+// .add-answer-btn,
+// .report-btn,
+// .add-question-btn,
+// .more-questions-btn,
+// .more-answers-btn,
+// .more-answers-btn {
+//   margin: 5px;
+//   padding: 2px;
+//   border: 1px solid black;
+//   max-width: 100px;
+//   text-align: center;
+//   border-radius: 1rem;
+//   box-shadow: .5rem .5rem .5rem #73776f;
+//   z-index: 10;
+// }
+
+// .helpful-btn:hover,
+// .add-answer-btn:hover,
+// .report-btn:hover,
+// .add-question-btn:hover,
+// .more-questions-btn:hover,
+// .more-answers-btn:hover,
+// .more-answers-btn:hover {
+//   cursor: pointer;
+// }
 
 .container,
 .user-info {
