--- a/public/styles.css
+++ b/public/styles.css
@@ -155,7 +155,8 @@ body {
   height: 50%;
   position: relative; }
   .related-text, .outfits-text {
-    font-size: 2rem; }
+    font-weight: 100;
+    font-size: 1.3rem; }
   .related-list, .outfits-list {
     height: 95%; }
   .related-modal, .outfits-modal {
@@ -224,43 +225,58 @@ body {
   overflow: hidden;
   outline: none; }
 
-.q-and-a {
-  display: flex;
-  flex-direction: column;
+.qa {
+  margin: 2rem 0;
   background-color: var(--color-grey-light-1);
-  height: max-content; }
+  height: 35vh; }
+  .qa-title {
+    margin-top: 2rem;
+    font-weight: 100;
+    font-size: 1.3rem; }
+  .qa-search {
+    height: 4rem;
+    margin: 2rem 0; }
+    .qa-search-input {
+      font-size: 2rem;
+      font-weight: 600;
+      text-transform: uppercase; }
+  .qa-icon {
+    font-size: 1.2rem; }
+  .qa-main {
+    max-height: 100vh;
+    overflow: scroll; }
+    .qa-main-item-q {
+      display: flex;
+      justify-content: space-between;
+      height: 3rem; }
+      .qa-main-item-q-body {
+        font-weight: 700;
+        font-size: 1.2rem; }
+      .qa-main-item-q-interactions {
+        width: 15rem;
+        display: flex;
+        justify-content: space-between;
+        align-items: center; }
+    .qa-main-item-a {
+      display: flex;
+      flex-direction: column;
+      justify-content: space-between;
+      min-height: 6rem;
+      max-height: 12rem;
+      margin-bottom: 2rem; }
+      .qa-main-item-a-interactions {
+        width: 28rem;
+        display: flex;
+        justify-content: space-between;
+        align-items: center; }
 
-.btn {
-  cursor: pointer; }
-  .btn_ {
-    border: 0;
-    outline: none;
-    background: transparent;
-    border-bottom: 1px solid var(--color-grey-dark-2);
-    color: var(--color-grey-dark-3); }
-
-.container,
-.user-info {
-  margin: 5px; }
-
-.user-info span {
-  color: #48463e; }
-
-.questions-and-answers {
-  display: flex;
-  flex-flow: column nowrap;
-  height: auto;
-  max-height: 100vh;
-  overflow: scroll; }
-
-.question-and-answer-container {
-  display: flex;
-  flex-flow: column nowrap; }
-
-.question-item {
-  display: flex;
-  flex-flow: row nowrap;
-  justify-content: space-between; }
+.btn_ {
+  cursor: pointer;
+  border: none;
+  outline: none;
+  background: transparent;
+  border-bottom: 1px solid #000;
+  font-size: 1rem; }
 
 .answer-header {
   display: flex;
@@ -283,12 +299,6 @@ body {
   right: 15%;
   background-color: #EDEBE8;
   overflow: scroll; }
-
-.interaction {
-  display: flex;
-  flex-direction: row;
-  flex-wrap: nowrap;
-  justify-content: space-between; }
 
 .no-questions {
   color: gray;
@@ -315,33 +325,6 @@ body {
   margin: 10px;
   max-width: 25%;
   max-height: 25%; }
-
-/* WIDGETS */
-.stars {
-  color: gold; }
-
-.btn {
-  font-size: 1.5rem;
-  font-weight: 300;
-  border: none;
-  color: #fff;
-  cursor: pointer; }
-  .btn:hover {
-    background-image: linear-gradient(to left, var(--color-primary-light), var(--color-primary-dark)); }
-  .btn:focus {
-    outline: none;
-    animation: pulsate 1s infinite; }
-
-@keyframes pulsate {
-  0% {
-    transform: scale(1);
-    box-shadow: none; }
-  50% {
-    transform: scale(1.05);
-    box-shadow: 0 1rem 4rem rgba(0, 0, 0, 0.25); }
-  100% {
-    transform: scale(1);
-    box-shadow: none; } }
 
 .search {
   display: flex;
@@ -397,3 +380,30 @@ body {
 .slider-disable {
   opacity: 0.5;
   pointer-events: none; }
+
+/* WIDGETS */
+.stars {
+  color: gold; }
+
+.btn {
+  font-size: 1.5rem;
+  font-weight: 300;
+  border: none;
+  color: #fff;
+  cursor: pointer; }
+  .btn:hover {
+    background-image: linear-gradient(to left, var(--color-primary-light), var(--color-primary-dark)); }
+  .btn:focus {
+    outline: none;
+    animation: pulsate 1s infinite; }
+
+@keyframes pulsate {
+  0% {
+    transform: scale(1);
+    box-shadow: none; }
+  50% {
+    transform: scale(1.05);
+    box-shadow: 0 1rem 4rem rgba(0, 0, 0, 0.25); }
+  100% {
+    transform: scale(1);
+    box-shadow: none; } }
