--- a/src/sass/components.scss
+++ b/src/sass/components.scss
@@ -146,8 +146,10 @@
 .related, .outfits {
   height: 50%;
   position: relative;
+
   &-text {
-    font-size: 2rem;
+    font-weight: 100;
+    font-size: 1.3rem;
   }
 
   &-list {
@@ -223,8 +225,6 @@
   }
 }
 
-
-
 .addOutfit-btn {
   position: absolute;
   top: 50%;
@@ -241,83 +241,84 @@
 }
 
 .outfits {
-  // margin-top: 4rem;
+
 }
 
 ////////// Q&A
 
-.q-and-a {
-  // padding: 1rem;
-  // margin: 1rem;
-  display: flex;
-  flex-direction: column;
+.qa {
+  margin: 2rem 0;
   background-color: var(--color-grey-light-1);
-  height: max-content;
-}
+  height: 35vh;
 
-.btn {
-  cursor: pointer;
+  &-title {
+    margin-top: 2rem;
+    font-weight: 100;
+    font-size: 1.3rem;
+  }
 
-  &_ {
-    border: 0;
-    outline: none;
-    background: transparent;
-    border-bottom: 1px solid var(--color-grey-dark-2);
-    color: var(--color-grey-dark-3);
+  &-search {
+    height: 4rem;
+    margin: 2rem 0;
+
+    &-input {
+      font-size: 2rem;
+      font-weight: 600;
+      text-transform: uppercase;
+    }
+  }
+
+  &-icon {
+    font-size: 1.2rem;
+  }
+
+  &-main {
+    max-height: 100vh;
+    overflow: scroll;
+
+    &-item-q {
+      display: flex;
+      justify-content: space-between;
+      height: 3rem;
+
+      &-body {
+        font-weight: 700;
+        font-size: 1.2rem;
+      }
+
+      &-interactions {
+        width: 15rem;
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+      }
+    }
+
+    &-item-a {
+      display: flex;
+      flex-direction: column;
+      justify-content: space-between;
+      min-height: 6rem;
+      max-height: 12rem;
+      margin-bottom: 2rem;
+
+      &-interactions {
+        width: 28rem;
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+      }
+    }
   }
 }
 
-// .helpful-btn,
-// .add-answer-btn,
-// .report-btn,
-// .add-question-btn,
-// .more-questions-btn,
-// .more-answers-btn,
-// .more-answers-btn {
-//   margin: 5px;
-//   padding: 2px;
-//   border: 1px solid black;
-//   max-width: 100px;
-//   text-align: center;
-//   border-radius: 1rem;
-//   box-shadow: .5rem .5rem .5rem #73776f;
-//   z-index: 10;
-// }
-
-// .helpful-btn:hover,
-// .add-answer-btn:hover,
-// .report-btn:hover,
-// .add-question-btn:hover,
-// .more-questions-btn:hover,
-// .more-answers-btn:hover,
-// .more-answers-btn:hover {
-//   cursor: pointer;
-// }
-
-.container,
-.user-info {
-  margin: 5px;
-}
-
-.user-info span {
-  color: #48463e;
-}
-
-.questions-and-answers {
-  display: flex;
-  flex-flow: column nowrap;
-  height: auto;
-  max-height: 100vh;
-  overflow: scroll;
-}
-.question-and-answer-container {
-  display: flex;
-  flex-flow: column nowrap;
-}
-.question-item {
-  display: flex;
-  flex-flow: row nowrap;
-  justify-content: space-between;
+.btn_ {
+  cursor: pointer;
+  border: none;
+  outline: none;
+  background: transparent;
+  border-bottom: 1px solid #000;
+  font-size: 1rem;
 }
 
 .answer-header {
@@ -343,13 +344,6 @@
   right: 15%;
   background-color: #EDEBE8;
   overflow: scroll;
-}
-
-.interaction {
-  display: flex;
-  flex-direction: row;
-  flex-wrap: nowrap;
-  justify-content: space-between;
 }
 
 .no-questions {
@@ -381,45 +375,4 @@
   margin: 10px;
   max-width: 25%;
   max-height: 25%;
-}
-
-/* WIDGETS */
-.stars {
-  color: gold;
-}
-
-.btn {
-  font-size: 1.5rem;
-  font-weight: 300;
-  border: none;
-  color: #fff;
-  cursor: pointer;
-
-  &:hover {
-      background-image: linear-gradient(to left, var(--color-primary-light), var(--color-primary-dark));
-  }
-
-  &:focus {
-      outline: none;
-      animation: pulsate 1s infinite;
-  }
-}
-
-////// KEYFRAMES
-
-@keyframes pulsate {
-  0% {
-      transform: scale(1);
-      box-shadow: none;
-  }
-
-  50% {
-      transform: scale(1.05);
-      box-shadow: 0 1rem 4rem rgba(0,0,0,.25);
-  }
-
-  100% {
-      transform: scale(1);
-      box-shadow: none;
-  }
 }
