--- a/src/sass/layout.scss
+++ b/src/sass/layout.scss
@@ -75,3 +75,44 @@
     pointer-events: none;
    }
 }
+
+/* WIDGETS */
+.stars {
+  color: gold;
+}
+
+.btn {
+  font-size: 1.5rem;
+  font-weight: 300;
+  border: none;
+  color: #fff;
+  cursor: pointer;
+
+  &:hover {
+      background-image: linear-gradient(to left, var(--color-primary-light), var(--color-primary-dark));
+  }
+
+  &:focus {
+      outline: none;
+      animation: pulsate 1s infinite;
+  }
+}
+
+////// KEYFRAMES
+
+@keyframes pulsate {
+  0% {
+      transform: scale(1);
+      box-shadow: none;
+  }
+
+  50% {
+      transform: scale(1.05);
+      box-shadow: 0 1rem 4rem rgba(0,0,0,.25);
+  }
+
+  100% {
+      transform: scale(1);
+      box-shadow: none;
+  }
+}
