interaction buttons stylized and updating helpfulness to reflect currently searched for question

--- a/src/sass/components.scss
+++ b/src/sass/components.scss
@@ -251,6 +251,24 @@
   min-height: 15vh;
   max-height: 100vh;
 
+  &-options {
+    display: flex;
+    justify-content: flex-start;
+
+    &-btn {
+      width: auto;
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      margin: 1rem 1rem 1rem 0;
+      padding: 1rem;
+      border: 1px solid black;
+      font-weight: 700;
+      font-size: 1.2rem;
+      cursor: pointer;
+    }
+  }
+
   &-title {
     margin-top: 2rem;
     font-weight: 100;
