--- a/public/styles.css
+++ b/public/styles.css
@@ -229,6 +229,20 @@ body {
   margin: 2rem 0;
   min-height: 15vh;
   max-height: 100vh; }
+  .qa-options {
+    display: flex;
+    justify-content: flex-start; }
+    .qa-options-btn {
+      width: auto;
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      margin: 1rem 1rem 1rem 0;
+      padding: 1rem;
+      border: 1px solid black;
+      font-weight: 700;
+      font-size: 1.2rem;
+      cursor: pointer; }
   .qa-title {
     margin-top: 2rem;
     font-weight: 100;
